codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__workflows__tests__workflow_live_cell_bounded_summary.snap
---
source: tui/src/chatwidget/workflows_tests.rs
assertion_line: 75
expression: visible_text(&lines)
---
• Review changes  running  7 agents  12.5K tok
  … 2 more workflows
