codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__workflows__tests__workflow_result_read_failed.snap
---
source: tui/src/chatwidget/workflows_tests.rs
expression: visible_text(&cell.display_lines(80))
---
✗ Failed to read Workflow result  wf_123456789
